# python-project

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/python_project/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
