[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "A Python project template"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pscosta5/python-project"
repository = "https://github.com/pscosta5/python-project"
keywords = ["Python", "template", "hypermodern"]
authors = ["Paulo S. Costa"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[tool.poetry.scripts]
python-project = "python_project.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
