[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "A Python project template"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pscosta5/python-project"
repository = "https://github.com/pscosta5/python-project"
keywords = ["Python", "template", "hypermodern"]
authors = ["Paulo S. Costa"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
desert = "^2020.1.6"
marshmallow = "^3.4.0"

[tool.poetry.scripts]
python-project = "python_project.console:main"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
ipykernel = "^5.1.4"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-isort = "^2.8.0"
toml = "^0.10.0"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
black = "^19.10b0"
safety = "^1.8.5"
mypy = "^0.761"
# TODO: Update pytype
pytype = {version = "^2020.2.6", python = "3.7"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_project"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
